# mtxstuff

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  todo.txt
.github/workflows/: ci.yml
src/: command.rs  file.rs  group.rs  main.rs  table.rs  track_operations.rs  tui.rs  ui.rs
src/ui/: group_files_list_widget.rs  group_list_widget.rs  mod.rs  popup.rs  selectable_state.rs  track_table_widget.rs
