[package]
name = "mtxstuff_rust"
version = "0.1.1"
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
walkdir = "2"
clap = "2.33.3"
log = { version = "0.4", features=["release_max_level_off"]}
log4rs = "1.0.0"
unicode-width = "0.1"

crossterm = { version = "0.20", features = [ "serde" ] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }