[package]
name = "mtxstuff"
version = "0.2.3"
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
edition = "2021"
description = "Tool to edit audio and subtitle track flags on mkv files"
readme = "README.md"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
walkdir = "2"
clap = "2.33.3"
unicode-width = "0.1"
anyhow = "1.0"
which = "4.2.2"

crossterm = { version = "0.20", features = [ "serde" ] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
