[package]
name = "mtxstuff"
version = "0.2.3"
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
edition = "2021"
description = "Tool to edit audio and subtitle track flags on mkv files"
readme = "README.md"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14.0"
walkdir = "2"
clap = "4.5.45"
unicode-width = "0.2"
anyhow = "1.0"
which = "8.0.0"

crossterm = { version = "0.29", features = [ "serde" ] }
ratatui = { version = "0.29", default-features = false, features = ['crossterm', 'serde'] }
